fixed align bugs

--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ a{
     border-radius: 12px;
 }
 .item-container{
-
+    
     display: flex;
 
 }
@@ -120,9 +120,9 @@ a:hover{
     justify-self: center;
 }
 .title-description{
+    width: 100%;
     margin-left: 2em;
     align-self: center;
-    width: 100%;
     justify-self: center;
 }
 img:hover{
@@ -271,26 +271,20 @@ img:hover{
         grid-gap:1em;
         align-items: flex-start;
         justify-content: flex-start; */
+       
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        /* align-items: center; */
       
     }
     .item-container{
-
+        width: 100%;
         display: flex;
         border-radius: 1em;
         align-items: center;
+        justify-content: center;
     }
-    .img-product{
-        width: 100%;
-    }
-    .title-description{
-    
-        width: 100%;
-    
-    }
-
     a{
         text-decoration: none;
         background-color: var(--accnt-clr);
